--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "A Discord Bot",
   "description": "A Discord Bot",
-  "keywords": ["node", "express", "heroku"],
+  "keywords": ["node", "express", "heroku", "typescript"],
   "image": "heroku/nodejs"
 }
