--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "ts-node index.ts",
     "lint": "eslint index.ts --fix",
     "deploy": "git push heroku main",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
@@ -29,6 +30,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@vitest/coverage-v8": "^2.0.5",
     "vitest": "^2.0.5"
   }
 }
