--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "engines": {
     "node": "20.x"
   },
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node index.ts",
-    "lint": "eslint index.ts --fix",
+    "start": "ts-node src/index.ts",
+    "lint": "eslint src/index.ts --fix",
     "deploy": "git push heroku main",
     "test": "vitest",
     "coverage": "vitest run --coverage"
