--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
-  "include": ["index.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
